objects/sf42_Devices__c.object
<CustomObject>
    <fields>
        <fullName>Access_settings_2__c</fullName>
        <label>Access settings	 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISDN</fullName>
                </value>
                <value>
                    <fullName>VPN</fullName>
                </value>
                <value>
                    <fullName>UMTS</fullName>
                </value>
                <value>
                    <fullName>VNC</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_settings__c</fullName>
        <label>Access settings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISDN</fullName>
                </value>
                <value>
                    <fullName>VPN</fullName>
                </value>
                <value>
                    <fullName>UMTS</fullName>
                </value>
                <value>
                    <fullName>VNC</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_BillingState__c</fullName>
        <formula>sf42_Account__r.BillingState</formula>
        <label>Account BillingState</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_information__c</fullName>
        <label>Additional information</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_information_for_Data_exchange__c</fullName>
        <label>Additional information for Data exchange</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_information_for_visualisation__c</fullName>
        <label>Additional information for visualisation</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Asset</label>
        <referenceTo>Customer_Asset__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Date__c</fullName>
        <inlineHelpText>When did you received order?</inlineHelpText>
        <label>Customer Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Price_JPY__c</fullName>
        <inlineHelpText>How much did you sale to customer?</inlineHelpText>
        <label>Customer Price JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_exchange_customer_level__c</fullName>
        <label>Data exchange (customer level)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>ODX</fullName>
                </value>
                <value>
                    <fullName>OPC</fullName>
                </value>
                <value>
                    <fullName>CMMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_visualisation_customer_level__c</fullName>
        <label>Data visualisation (customer level)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>OMNITREND</fullName>
                </value>
                <value>
                    <fullName>OMNITREND Web</fullName>
                </value>
                <value>
                    <fullName>OMTC</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>VIBGUARD Viewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_after_expected_return__c</fullName>
        <description>How many days passed after expected_return_date</description>
        <formula>ptt_expected_return_date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days after expected return</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Status__c</fullName>
        <label>Device Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Stolen</fullName>
                </value>
                <value>
                    <fullName>Trade-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_User_email__c</fullName>
        <formula>sf42_de_User__r.Email</formula>
        <label>Device User email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_on_device__c</fullName>
        <label>Feature on device</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gateway_2__c</fullName>
        <label>Gateway 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <label>Gateway</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_address_2__c</fullName>
        <label>IP address 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_address__c</fullName>
        <label>IP address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Processing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Processing</label>
        <referenceTo>Order_Processing__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Fill this field if it is a part of another device.
Example: sensor which is a part of Computer package.</inlineHelpText>
        <label>Parent Device</label>
        <referenceTo>sf42_Devices__c</referenceTo>
        <relationshipLabel>Devices installed</relationshipLabel>
        <relationshipName>Devices_installed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_no_static_IP_address_2__c</fullName>
        <label>Phone no./ static IP address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_no_static_IP_address__c</fullName>
        <label>Phone no./ static IP address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>sf42_Project__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subnet_Mask_2__c</fullName>
        <label>Subnet Mask 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subnet_Mask__c</fullName>
        <label>Subnet Mask</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used if a Survey Response for Device has been completed.
True - completed with success</description>
        <label>Survey Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UK_PO_Number__c</fullName>
        <label>UK - PO-Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID18__c</fullName>
        <formula>sf42_de_User__r.sf42_de_18_digit_ID_for_Campaign__c</formula>
        <label>User ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_phone__c</fullName>
        <formula>sf42_de_User__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device User phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ifspmaps_GEO_Lat__c</fullName>
        <description>eMapping Latitude Coordinate</description>
        <label>IFSP MAPS GEO Lat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ifspmaps_GEO_Lon__c</fullName>
        <description>eMapping Longitude Coordinate</description>
        <label>IFSP MAPS GEO Lon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_Business_Unit__c</fullName>
        <description>Business Unit from Account for Devices</description>
        <formula>sf42_Account__r.sf42_Business_Unit__c</formula>
        <label>Account Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_ID__c</fullName>
        <formula>sf42_Account__r.Account_ID_18__c</formula>
        <label>Account ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_Mark__c</fullName>
        <description>Account Mark field taken from Account object.</description>
        <formula>Text(sf42_Account__r.Account_Mark__c)</formula>
        <label>Account Mark</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_Name__c</fullName>
        <description>Account name for AW Duplicate</description>
        <formula>sf42_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_Province__c</fullName>
        <formula>sf42_Account__r.BillingState</formula>
        <label>Account Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Calibration_interval__c</fullName>
        <inlineHelpText>Specify how often device should be recalibrated.</inlineHelpText>
        <label>Calibration interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6 months</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                    <default>true</default>
                    <label>2 years</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Checked_out_date__c</fullName>
        <inlineHelpText>Date when device was lent to customer.</inlineHelpText>
        <label>Checked out date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ptt_Contact_who_borrow_device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select client contact who borrow device.</inlineHelpText>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Devices borrowed by this client</relationshipLabel>
        <relationshipName>Borrow_device</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Device_User_First_Name__c</fullName>
        <formula>sf42_de_User__r.FirstName</formula>
        <label>Device User First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Device_User_Last_Name__c</fullName>
        <formula>sf42_de_User__r.LastName</formula>
        <label>Device User Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Disable_Duplicate_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use only when you are sure that you want to bypass duplicate check.</inlineHelpText>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_FTP_Auto_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reports on SDIC Monitoring to see where this feature is installed and where not.</description>
        <label>FTP Auto Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_HW_Status__c</fullName>
        <inlineHelpText>Hardware version, revision.</inlineHelpText>
        <label>HW-Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_ID18__c</fullName>
        <description>This formula convert id from 15 to 18 characters.</description>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <label>Device ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_ID_Number__c</fullName>
        <inlineHelpText>ID Number of device.</inlineHelpText>
        <label>ID - Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Device_Status__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADASH</fullName>
                    <default>true</default>
                    <label>ADASH</label>
                </value>
                <value>
                    <fullName>Azima DLI</fullName>
                </value>
                <value>
                    <fullName>BENTLY NEVADA/GE</fullName>
                </value>
                <value>
                    <fullName>CEMB</fullName>
                </value>
                <value>
                    <fullName>COMMTEST</fullName>
                </value>
                <value>
                    <fullName>Emerson CSI</fullName>
                </value>
                <value>
                    <fullName>FAG</fullName>
                </value>
                <value>
                    <fullName>FLUKE</fullName>
                </value>
                <value>
                    <fullName>IFM</fullName>
                </value>
                <value>
                    <fullName>Kittiwake</fullName>
                </value>
                <value>
                    <fullName>NATIONAL INSTRUMENTS</fullName>
                </value>
                <value>
                    <fullName>OTHER (add description!)</fullName>
                </value>
                <value>
                    <fullName>ROCKWELL/ENTEK</fullName>
                </value>
                <value>
                    <fullName>SCHENCK</fullName>
                </value>
                <value>
                    <fullName>Siemens</fullName>
                </value>
                <value>
                    <fullName>SKF</fullName>
                </value>
                <value>
                    <fullName>SPM</fullName>
                </value>
                <value>
                    <fullName>Timken</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Next_calibration_date__c</fullName>
        <formula>CASE(ptt_Calibration_interval__c,
&quot;6 months&quot;, sf42_de_Calibration_Date__c + 183,
&quot;1 year&quot;, sf42_de_Calibration_Date__c + 365,
&quot;2 years&quot;, sf42_de_Calibration_Date__c + 730,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculation based on &quot;Last Calibration date&quot; and &quot;Calibration interval&quot;.</inlineHelpText>
        <label>Next Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ptt_Order_Number__c</fullName>
        <description>Only to use when device is a trade-in device.</description>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Owner_Business_Unit__c</fullName>
        <formula>TEXT(Owner:User.sf42_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Parent_ID18__c</fullName>
        <formula>Parent_Device__r.ptt_ID18__c</formula>
        <label>Parent ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Product_Code_1__c</fullName>
        <formula>ptt_Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code_1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Product_Code__c</fullName>
        <formula>sf42_de_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Product_Description__c</fullName>
        <formula>sf42_de_Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Product_Family__c</fullName>
        <formula>TEXT(sf42_de_Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Purchase_price_USD__c</fullName>
        <description>“Purchase Price USD” is a price when bought from Fluke Singapore.</description>
        <label>Purchase price USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_Router_Type__c</fullName>
        <label>Router Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISDN</fullName>
                </value>
                <value>
                    <fullName>VPN</fullName>
                </value>
                <value>
                    <fullName>UMTS</fullName>
                </value>
                <value>
                    <fullName>VNC</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_SW_Status_OLD__c</fullName>
        <description>This field can be deleted after 2011-10-30 if no complain from Japan and Germany.</description>
        <label>zOLD - SW-Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_SW_Status__c</fullName>
        <description>This field was before Device Status sf42_de_Device_Status__c</description>
        <inlineHelpText>Software (firmware) version.</inlineHelpText>
        <label>SW-Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_User_Business_Unit__c</fullName>
        <formula>sf42_de_User__r.sf42_Business_Unit__c</formula>
        <label>User Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_expected_return_date__c</fullName>
        <inlineHelpText>Date when device was returned by client after rental.</inlineHelpText>
        <label>Expected return date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ptt_gl_Owned_competitor_devices__c</fullName>
        <description>select box should be below the checkbox competitors device
this field should be available for all users with access to the devices
if checkbox competitors device is selected, the input in the field competitors device is mandatory
This is based on:
https://jira.pruftechnik.com/jira/browse/PTCRM-275</description>
        <inlineHelpText>Competitor devices that company already have.</inlineHelpText>
        <label>Owned Competitor devices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>sf42_de_Competition_Device__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALI - ACOEM AB (Fixturlaser)</fullName>
                </value>
                <value>
                    <fullName>ALI - Competitor</fullName>
                </value>
                <value>
                    <fullName>ALI - Damalini</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy Laser - D 4x0 D 6x0</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy Laser - D 550 Extreme E 910</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy Laser - D 5x0 D 800</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy Laser - E 710</fullName>
                </value>
                <value>
                    <fullName>ALI - FAG</fullName>
                </value>
                <value>
                    <fullName>ALI - FAG - EQUILIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - FAG - Top Laser</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - DIRIGO</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - EXIGO</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - GO</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - UPAD</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - XA</fullName>
                </value>
                <value>
                    <fullName>ALI - GLOi AB</fullName>
                </value>
                <value>
                    <fullName>ALI - Hamar Laser</fullName>
                </value>
                <value>
                    <fullName>ALI - SKF group</fullName>
                </value>
                <value>
                    <fullName>ALI - SKF group - TKSA 20</fullName>
                </value>
                <value>
                    <fullName>ALI - SKF group - TKSA 40</fullName>
                </value>
                <value>
                    <fullName>ALI - SKF group - TKSA 60</fullName>
                </value>
                <value>
                    <fullName>ALI - SKF group - TKSA 80</fullName>
                </value>
                <value>
                    <fullName>ALI - Status Pro</fullName>
                </value>
                <value>
                    <fullName>ALI - Status Pro - Pro/µ - Level</fullName>
                </value>
                <value>
                    <fullName>ALI - Status Pro - Pro/µ - Line</fullName>
                </value>
                <value>
                    <fullName>ALI - Status Pro - Pro Flange</fullName>
                </value>
                <value>
                    <fullName>ALI - Status Pro - Pro Orbit</fullName>
                </value>
                <value>
                    <fullName>ALI - Status Pro - Pro Roll</fullName>
                </value>
                <value>
                    <fullName>CM - ACOEM One Prod</fullName>
                </value>
                <value>
                    <fullName>CM - Adash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_mm_Account_Billing_address__c</fullName>
        <formula>sf42_Account__r.BillingStreet &amp; BR() &amp;
sf42_Account__r.BillingPostalCode &amp; &quot; &quot; &amp; sf42_Account__r.BillingCity &amp; BR() &amp;
sf42_Account__r.BillingState &amp; &quot; &quot; &amp; sf42_Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_mm_Account_City__c</fullName>
        <description>For Mail Merge</description>
        <formula>TRIM(sf42_Account__r.BillingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_mm_Account_Shipping_address__c</fullName>
        <formula>sf42_Account__r.ShippingStreet  &amp; BR() &amp;
sf42_Account__r.ShippingPostalCode  &amp; &quot; &quot; &amp; sf42_Account__r.ShippingCity &amp; BR() &amp;
sf42_Account__r.ShippingState  &amp; &quot; &quot; &amp; sf42_Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_pt_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please specify who from PT lend (give out) this device to the client.</inlineHelpText>
        <label>PT User who lend device</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Company which bought this device.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_COGS_Type__c</fullName>
        <label>COGS Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COGS NDT</fullName>
                </value>
                <value>
                    <fullName>COGS CM</fullName>
                </value>
                <value>
                    <fullName>COGS ALI</fullName>
                </value>
                <value>
                    <fullName>COGS other producs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_Customer_Delivery_Date__c</fullName>
        <inlineHelpText>When device was delivered to customer?</inlineHelpText>
        <label>Customer Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_Delivery_expected_at__c</fullName>
        <label>Expected arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_Detail_Desciption2__c</fullName>
        <label>Detail Desciption</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_Division__c</fullName>
        <label>Division</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NDT</fullName>
                    <default>true</default>
                    <label>NDT</label>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>ALI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>sf42_Invoice__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_Next_Calibration__c</fullName>
        <label>Next Calibration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_Old_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf42_Opportunity_new__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_Order_Date__c</fullName>
        <inlineHelpText>When did you order to Singapore team?</inlineHelpText>
        <label>Purchase Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_PO_Number__c</fullName>
        <formula>sf42_Case__r.sf42_jp_PO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO - Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Purchase_price_Euro__c</fullName>
        <label>Purchase price Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf42_Purchase_price__c</fullName>
        <label>Purchase price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_Received_from_SP_on__c</fullName>
        <label>Received on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Shipment_Date__c</fullName>
        <inlineHelpText>When device was delivered from Germany?</inlineHelpText>
        <label>Date of Delivery</label>
        <type>Date</type>
    </fields>
</CustomObject>